--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async-waterfall": "^0.1.5",
     "axios": "^0.20.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
