--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "get-image-colors": "^4.0.0",
     "google-oauth": "0.0.2",
+    "htmlparser2": "^5.0.0",
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
     "mongoose": "^5.10.8",
@@ -22,6 +23,8 @@
     "nunjucks": "^3.2.2",
     "nunjucks-date": "^1.5.0",
     "rss-parser": "^3.9.0",
+    "rss-to-js": "^1.0.1",
+    "rss-url-parser": "^2.1.1",
     "serve-favicon": "~2.3.0",
     "showdown": "^1.9.1"
   }
