--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "get-image-colors": "^4.0.0",
     "google-oauth": "0.0.2",
     "htmlparser2": "^5.0.0",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "mongodb": "^2.2.10",
     "mongoose": "^5.10.8",
