--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async-waterfall": "^0.1.5",
     "axios": "^0.20.0",
     "body-parser": "~1.13.2",
+    "canvas": "^2.6.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "everyauth": "^0.4.9",
