--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "everyauth": "^0.4.9",
     "express": "~4.13.1",
+    "express-useragent": "^1.0.15",
     "get-image-colors": "^4.0.0",
     "google-oauth": "0.0.2",
     "htmlparser2": "^5.0.0",
